// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button As Link 1`] = `
<a
  className="Button__LinkWrapper-sc-8y2ppg-0 cZZizN"
  disabled={false}
  href="/"
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    This is a Link
  </div>
</a>
`;

exports[`Storyshots Button Confirm 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(121deg, 90%, 86%)",
      "--button-background-color--hover": "hsl(121deg, 90%, 76%)",
      "--button-color": "hsl(0deg, 0%, 20%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Confirm
  </div>
</button>
`;

exports[`Storyshots Button Danger 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(356deg, 74%, 57%)",
      "--button-background-color--hover": "hsl(356deg, 74%, 47%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Danger
  </div>
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Default
  </div>
</button>
`;

exports[`Storyshots Button Full Width 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "100%",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Full Width
  </div>
</button>
`;

exports[`Storyshots Button Inactive 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={true}
  style={
    Object {
      "--button-background-color": "hsl(0deg, 0%, 80%)",
      "--button-background-color--hover": "hsl(0deg, 0%, 80%)",
      "--button-color": "hsl(0deg, 0%, 20%)",
      "--button-cursor": "not-allowed",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Inactive
  </div>
</button>
`;

exports[`Storyshots Button Loading 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "wait",
      "--button-width": "fit-content",
      "--children-opacity": 0,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Loading
  </div>
  <div
    className="Button__SpinnerWrapper-sc-8y2ppg-3 kTYYTi"
  >
    <div
      className="Spinner__Wrapper-gyi5eh-0 kazxNx"
      style={
        Object {
          "--spinner-size": "24px",
        }
      }
    >
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-1.1s",
            "--blip-rotation": "30deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-1s",
            "--blip-rotation": "60deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.9s",
            "--blip-rotation": "90deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.8s",
            "--blip-rotation": "120deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.7s",
            "--blip-rotation": "150deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.6s",
            "--blip-rotation": "180deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.5s",
            "--blip-rotation": "210deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.4s",
            "--blip-rotation": "240deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.3s",
            "--blip-rotation": "270deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.2s",
            "--blip-rotation": "300deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.1s",
            "--blip-rotation": "330deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "0s",
            "--blip-rotation": "0deg",
          }
        }
      />
    </div>
  </div>
</button>
`;

exports[`Storyshots CenterCard Default 1`] = `
<div
  className="CenterCard__Wrapper-sc-10a7mm0-0 hLOMDl"
>
  <div
    className="CenterCard__Card-sc-10a7mm0-1 juaUsT"
  >
    <h1
      className="CenterCard__Title-sc-10a7mm0-2 jRBZpB"
    >
      Center Card
    </h1>
    <span
      className="Spacer-eszl9t-0 jaiFwi"
      size={8}
    />
    This is a card that will remain in the center of a full width and height parent
  </div>
  <span
    className="Spacer-eszl9t-0 dbevjS"
    size={64}
  />
</div>
`;

exports[`Storyshots Emails/Base Email Default 1`] = `
<table
  width="100%"
>
  <tr>
    <td
      align="left"
      width="100%"
    >
      <strong
        style={
          Object {
            "fontSize": "28px",
          }
        }
      >
        Cerebello
      </strong>
    </td>
  </tr>
  <tr
    height="48"
  >
    <td
      align="center"
      height="48"
    >
       
    </td>
  </tr>
  <tr>
    <td
      align="center"
    />
  </tr>
  <tr
    height="48"
  >
    <td
      align="center"
      height="48"
    >
       
    </td>
  </tr>
  <tr>
    <td
      align="center"
      width="100%"
    >
      <img
        alt="Cerebello Wave Graphic"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjwhRE9DVFlQRSBzdmcgUFVCTElDICItLy9XM0MvL0RURCBTVkcgMS4xLy9FTiIgImh0dHA6Ly93d3cudzMub3JnL0dyYXBoaWNzL1NWRy8xLjEvRFREL3N2ZzExLmR0ZCI+Cjxzdmcgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgdmlld0JveD0iMCAwIDgwMCAzMTAiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSIgeG1sbnM6c2VyaWY9Imh0dHA6Ly93d3cuc2VyaWYuY29tLyIgc3R5bGU9ImZpbGwtcnVsZTpldmVub2RkO2NsaXAtcnVsZTpldmVub2RkO3N0cm9rZS1saW5lam9pbjpyb3VuZDtzdHJva2UtbWl0ZXJsaW1pdDoyOyI+CiAgICA8ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLDAsMCwxLDAsLTkwKSI+CiAgICAgICAgPHBhdGggZD0iTTAsMjUwQzQwMCwzMDAgNDAwLDUwIDgwMCwxMDBMODAwLDQwMEwwLDQwMEwwLDI1MFoiIHN0eWxlPSJmaWxsOnVybCgjX0xpbmVhcjEpO2ZpbGwtcnVsZTpub256ZXJvOyIvPgogICAgPC9nPgogICAgPGRlZnM+CiAgICAgICAgPGxpbmVhckdyYWRpZW50IGlkPSJfTGluZWFyMSIgeDE9IjAiIHkxPSIwIiB4Mj0iMSIgeTI9IjAiIGdyYWRpZW50VW5pdHM9InVzZXJTcGFjZU9uVXNlIiBncmFkaWVudFRyYW5zZm9ybT0ibWF0cml4KC0zLjIxNjczZS0xMywzMDYuNjUsLTMwNi42NSwtMy4yMTY3M2UtMTMsMCw5My4zNTAzKSI+PHN0b3Agb2Zmc2V0PSIwIiBzdHlsZT0ic3RvcC1jb2xvcjpyZ2IoMjU1LDI0MiwyMzQpO3N0b3Atb3BhY2l0eToxIi8+PHN0b3Agb2Zmc2V0PSIxIiBzdHlsZT0ic3RvcC1jb2xvcjpyZ2IoMjM5LDIzNSwyNTUpO3N0b3Atb3BhY2l0eToxIi8+PC9saW5lYXJHcmFkaWVudD4KICAgIDwvZGVmcz4KPC9zdmc+Cg=="
        width="100%"
      />
    </td>
  </tr>
  <tr>
    <td
      align="left"
      width="100%"
    >
      <p
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        © Koentges Lab 2021
      </p>
    </td>
  </tr>
</table>
`;

exports[`Storyshots Emails/Verification Email Default 1`] = `
<table
  width="100%"
>
  <tr>
    <td
      align="left"
      width="100%"
    >
      <strong
        style={
          Object {
            "fontSize": "28px",
          }
        }
      >
        Cerebello
      </strong>
    </td>
  </tr>
  <tr
    height="48"
  >
    <td
      align="center"
      height="48"
    >
       
    </td>
  </tr>
  <tr>
    <td
      align="center"
    >
      <table
        border="0"
        cellPadding="0"
        cellSpacing="0"
        width="100%"
      >
        <tr>
          <td
            align="center"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            Sign in as 
            <strong>
              dude@cool​.org
            </strong>
          </td>
        </tr>
        <tr>
          <td
            align="center"
            style={
              Object {
                "padding": "28px",
              }
            }
          >
            <table
              border="0"
              cellPadding="0"
              cellSpacing="0"
            >
              <tr>
                <td
                  align="center"
                >
                  <a
                    href="http://localhost:3000/api/auth/callback/email?email=will%40willhall.uk&token=3cc78ba88d9013db1b5d043013a1bc9f7b63dd349fc50d4632561e1f140e748d"
                    rel="noreferrer"
                    style={
                      Object {
                        "backgroundColor": "#775CF0",
                        "borderRadius": "4px",
                        "color": "#ffffff",
                        "fontSize": "18px",
                        "letterSpacing": "2px",
                        "paddingBottom": "10px",
                        "paddingLeft": "16px",
                        "paddingRight": "16px",
                        "paddingTop": "10px",
                        "textDecoration": "none",
                        "textTransform": "uppercase",
                      }
                    }
                    target="_blank"
                  >
                    Sign in
                  </a>
                </td>
              </tr>
            </table>
          </td>
        </tr>
        <tr
          height="4"
        >
          <td
            align="center"
            height="4"
          >
             
          </td>
        </tr>
        <tr>
          <td
            align="center"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            If you did not request this email you can safely ignore it.
          </td>
        </tr>
        <tr
          height="16"
        >
          <td
            align="center"
            height="16"
          >
             
          </td>
        </tr>
        <tr>
          <td
            align="center"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            If the sign in button doesn't work, try this link:
          </td>
        </tr>
        <tr>
          <td
            align="center"
          >
            <table
              border="0"
              cellPadding="0"
              cellSpacing="0"
              width="250"
            >
              <tr>
                <td
                  align="center"
                  style={
                    Object {
                      "fontSize": "12px",
                      "wordBreak": "break-all",
                    }
                  }
                >
                  <a
                    href="http://localhost:3000/api/auth/callback/email?email=will%40willhall.uk&token=3cc78ba88d9013db1b5d043013a1bc9f7b63dd349fc50d4632561e1f140e748d"
                    rel="noreferrer"
                    target="_blank"
                  >
                    http://localhost:3000/api/auth/callback/email?email=will%40willhall.uk&token=3cc78ba88d9013db1b5d043013a1bc9f7b63dd349fc50d4632561e1f140e748d
                  </a>
                </td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </td>
  </tr>
  <tr
    height="48"
  >
    <td
      align="center"
      height="48"
    >
       
    </td>
  </tr>
  <tr>
    <td
      align="center"
      width="100%"
    >
      <img
        alt="Cerebello Wave Graphic"
        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjwhRE9DVFlQRSBzdmcgUFVCTElDICItLy9XM0MvL0RURCBTVkcgMS4xLy9FTiIgImh0dHA6Ly93d3cudzMub3JnL0dyYXBoaWNzL1NWRy8xLjEvRFREL3N2ZzExLmR0ZCI+Cjxzdmcgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgdmlld0JveD0iMCAwIDgwMCAzMTAiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSIgeG1sbnM6c2VyaWY9Imh0dHA6Ly93d3cuc2VyaWYuY29tLyIgc3R5bGU9ImZpbGwtcnVsZTpldmVub2RkO2NsaXAtcnVsZTpldmVub2RkO3N0cm9rZS1saW5lam9pbjpyb3VuZDtzdHJva2UtbWl0ZXJsaW1pdDoyOyI+CiAgICA8ZyB0cmFuc2Zvcm09Im1hdHJpeCgxLDAsMCwxLDAsLTkwKSI+CiAgICAgICAgPHBhdGggZD0iTTAsMjUwQzQwMCwzMDAgNDAwLDUwIDgwMCwxMDBMODAwLDQwMEwwLDQwMEwwLDI1MFoiIHN0eWxlPSJmaWxsOnVybCgjX0xpbmVhcjEpO2ZpbGwtcnVsZTpub256ZXJvOyIvPgogICAgPC9nPgogICAgPGRlZnM+CiAgICAgICAgPGxpbmVhckdyYWRpZW50IGlkPSJfTGluZWFyMSIgeDE9IjAiIHkxPSIwIiB4Mj0iMSIgeTI9IjAiIGdyYWRpZW50VW5pdHM9InVzZXJTcGFjZU9uVXNlIiBncmFkaWVudFRyYW5zZm9ybT0ibWF0cml4KC0zLjIxNjczZS0xMywzMDYuNjUsLTMwNi42NSwtMy4yMTY3M2UtMTMsMCw5My4zNTAzKSI+PHN0b3Agb2Zmc2V0PSIwIiBzdHlsZT0ic3RvcC1jb2xvcjpyZ2IoMjU1LDI0MiwyMzQpO3N0b3Atb3BhY2l0eToxIi8+PHN0b3Agb2Zmc2V0PSIxIiBzdHlsZT0ic3RvcC1jb2xvcjpyZ2IoMjM5LDIzNSwyNTUpO3N0b3Atb3BhY2l0eToxIi8+PC9saW5lYXJHcmFkaWVudD4KICAgIDwvZGVmcz4KPC9zdmc+Cg=="
        width="100%"
      />
    </td>
  </tr>
  <tr>
    <td
      align="left"
      width="100%"
    >
      <p
        style={
          Object {
            "fontSize": "12px",
          }
        }
      >
        © Koentges Lab 2021
      </p>
    </td>
  </tr>
</table>
`;

exports[`Storyshots Layout Default 1`] = `
<div
  className="Layout__Wrapper-sc-152h13w-0 jYBAE"
>
  <header>
    <h1
      className="Layout__Title-sc-152h13w-2 jIbefR"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cerebello
      </a>
    </h1>
  </header>
  <main
    className="Layout__Main-sc-152h13w-1 fnPORG"
  >
    Body of the App!
  </main>
  <footer>
    <p
      className="Layout__Note-sc-152h13w-3 hdQAOg"
    >
      © Koentges Lab 2021
    </p>
  </footer>
</div>
`;

exports[`Storyshots Layout With Center Card 1`] = `
<div
  className="Layout__Wrapper-sc-152h13w-0 jYBAE"
>
  <header>
    <h1
      className="Layout__Title-sc-152h13w-2 jIbefR"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cerebello
      </a>
    </h1>
  </header>
  <main
    className="Layout__Main-sc-152h13w-1 fnPORG"
  >
    <div
      className="CenterCard__Wrapper-sc-10a7mm0-0 hLOMDl"
    >
      <div
        className="CenterCard__Card-sc-10a7mm0-1 juaUsT"
      >
        <h1
          className="CenterCard__Title-sc-10a7mm0-2 jRBZpB"
        >
          title
        </h1>
        <span
          className="Spacer-eszl9t-0 jaiFwi"
          size={8}
        />
        Body of card
      </div>
      <span
        className="Spacer-eszl9t-0 dbevjS"
        size={64}
      />
    </div>
  </main>
  <footer>
    <p
      className="Layout__Note-sc-152h13w-3 hdQAOg"
    >
      © Koentges Lab 2021
    </p>
  </footer>
</div>
`;

exports[`Storyshots Spinner Default 1`] = `
<div
  className="Spinner__Wrapper-gyi5eh-0 kazxNx"
  style={
    Object {
      "--spinner-size": "24px",
    }
  }
>
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-1.1s",
        "--blip-rotation": "30deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-1s",
        "--blip-rotation": "60deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.9s",
        "--blip-rotation": "90deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.8s",
        "--blip-rotation": "120deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.7s",
        "--blip-rotation": "150deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.6s",
        "--blip-rotation": "180deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.5s",
        "--blip-rotation": "210deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.4s",
        "--blip-rotation": "240deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.3s",
        "--blip-rotation": "270deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.2s",
        "--blip-rotation": "300deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.1s",
        "--blip-rotation": "330deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "0s",
        "--blip-rotation": "0deg",
      }
    }
  />
</div>
`;

exports[`Storyshots SubtleError Default 1`] = `
<div
  className="SubtleError-sc-1ad23du-0 dNPUwa"
>
  This is a subtle error
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="TextInput__Wrapper-sc-5gm92g-0 dIStPG"
  style={
    Object {
      "--input-border-color": "hsl(0deg, 0%, 40%)",
      "--input-border-color--hover": "hsl(0deg, 0%, 20%)",
      "--input-color": "hsl(0deg, 0%, 20%)",
      "--input-color--error": "hsl(356deg, 74%, 52%)",
      "--input-placeholder-color": "hsl(0deg, 0%, 60%)",
    }
  }
>
  <label
    className="TextInput__FormLabel-sc-5gm92g-1 jaMEGt"
    htmlFor="email"
  >
    Email Address
  </label>
  <input
    className="TextInput__Input-sc-5gm92g-2 bNrYpa"
    disabled={false}
    name="email"
    placeholder="joe@smith.com"
    type="email"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Inactive 1`] = `
<div
  className="TextInput__Wrapper-sc-5gm92g-0 dIStPG"
  style={
    Object {
      "--input-border-color": "hsl(0deg, 0%, 60%)",
      "--input-border-color--hover": "hsl(0deg, 0%, 60%)",
      "--input-color": "hsl(0deg, 0%, 60%)",
      "--input-color--error": "hsl(0deg, 0%, 60%)",
      "--input-cursor": "not-allowed",
      "--input-placeholder-color": "hsl(0deg, 0%, 60%)",
    }
  }
>
  <label
    className="TextInput__FormLabel-sc-5gm92g-1 jaMEGt"
    htmlFor="email"
  >
    Email Address
  </label>
  <input
    className="TextInput__Input-sc-5gm92g-2 bNrYpa"
    disabled={true}
    name="email"
    placeholder="joe@smith.com"
    type="email"
    value=""
  />
</div>
`;

exports[`Storyshots Wave Default 1`] = `
<svg
  className="Wave__SVG-sc-14esvht-0 hZSGlQ"
  style={
    Object {
      "--svg-transform-rotate": "rotate(0deg)",
    }
  }
  version="1.1"
  viewBox="0 90 800 310"
  width="100%"
>
  <defs>
    <linearGradient
      gradientTransform="rotate(90)"
      id="linear"
    >
      <stop
        offset="50%"
        stopColor="hsl(23deg, 100%, 96%)"
      />
      <stop
        offset="95%"
        stopColor="hsl(251deg, 83%, 96%)"
      />
    </linearGradient>
  </defs>
  <g>
    <path
      d=" M 0 250  C 400 300 400 50 800 100  L 800 400 L 0 400 Z "
      style={
        Object {
          "fill": "url(#linear)",
          "stroke": "none",
        }
      }
    />
  </g>
</svg>
`;

exports[`Storyshots Wave Flip 1`] = `
<svg
  className="Wave__SVG-sc-14esvht-0 hZSGlQ"
  style={
    Object {
      "--svg-transform-rotate": "rotate(180deg)",
    }
  }
  version="1.1"
  viewBox="0 90 800 310"
  width="100%"
>
  <defs>
    <linearGradient
      gradientTransform="rotate(90)"
      id="linear"
    >
      <stop
        offset="50%"
        stopColor="hsl(23deg, 100%, 96%)"
      />
      <stop
        offset="95%"
        stopColor="hsl(251deg, 83%, 96%)"
      />
    </linearGradient>
  </defs>
  <g>
    <path
      d=" M 0 250  C 400 300 400 50 800 100  L 800 400 L 0 400 Z "
      style={
        Object {
          "fill": "url(#linear)",
          "stroke": "none",
        }
      }
    />
  </g>
</svg>
`;
